# human-ai-papers

./: .env.example  .gitignore  00_项目索引.md  00_项目进展.md  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily_update.yml
config/: channels.yaml
config/themes/: mental-health.yaml
data/exports/mental-health/: meta.json  papers.json  papers_full.json
data/reports/: unified-publish-report.json  update-run.json
data/upstream/: manifest.json
data/upstream/ob/: _source.json  meta.json  papers.json
data/upstream/ur/: _source.json  meta.json  papers.json  papers_full.json
docs/: adding-a-channel.md
publisher/: __init__.py  build_index.py  build_rss.py  channel_registry.py  git_source.py  io_utils.py  merge_channels.py  normalize_contract.py  stable_id.py  update_pipeline.py  validate_release.py
scripts/: build_unified_index.py  fetch_mental_health.py  score_mental_health.py  sync_legacy.py  update_project.py  validate_release.py
src/mental_health/: __init__.py  config.py  openalex.py  scoring.py  signals.py
tests/: browser_smoke.py  test_mental_health.py  test_publisher.py
web/: .gitignore  package-lock.json  package.json  vercel.json
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/components/: AboutStatus.tsx  ChannelTabs.tsx  FilterPanel.tsx  Footer.tsx  HeaderNav.tsx  Icons.tsx  PaperCard.tsx  PaperDetailView.tsx  PaperExplorer.tsx  PapersDataProvider.tsx  Spectrum.tsx
web/lib/: data.ts  demo-data.ts  papers.ts  storage.ts  types.ts
web/public/: rss.xml
web/scripts/: smoke_test.py
(+1927 files in other folders)
